--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Seneca plugin for hapi-based systems.",
   "main": "hapi.js",
   "scripts": {
-    "test": "lab -P test -t 90",
+    "test": "lab -v -L -P test -t 90",
     "prettier": "prettier --write --no-semi --single-quote *.js lib/*.js test/*.js",
     "coveralls": "lab -s -P test -r lcov | coveralls",
     "clean-npm": "rm -rf node_modules package-lock.lock",
@@ -31,15 +31,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "code": "^5.2.4",
-    "coveralls": "^3.0.3",
-    "hapi": "^18.1.0",
-    "inert": "^5.1.2",
-    "lab": "^18.0.2",
-    "prettier": "^1.16.4",
+    "@hapi/code": "^6.0.0",
+    "@hapi/hapi": "^18.3.1",
+    "@hapi/inert": "^5.2.1",
+    "@hapi/lab": "^20.0.0",
+    "coveralls": "^3.0.6",
+    "prettier": "^1.18.2",
     "seneca": "plugin",
-    "seneca-browser": "~0.2.0",
-    "seneca-plugin-validator": "0.0.1",
-    "seneca-promisify": "^0.7.1"
+    "seneca-browser": "~0.5.0",
+    "seneca-plugin-validator": "0.2.0",
+    "seneca-promisify": "^0.8.0"
   }
 }
