--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {},
   "devDependencies": {
     "@hapi/code": "^6.0.0",
+    "@hapi/cookie": "^10.1.0",
     "@hapi/hapi": "^18.3.1",
     "@hapi/inert": "^5.2.1",
     "@hapi/lab": "^20.0.0",
